# sistemasDePotencia

./: .editorconfig  .gitignore  README.md  projecto_final.py  pyproject.toml  setup.cfg  setup.py
registro/: projecto_final.py  registro.py
sistemasDePotencia/: comun.py  despacho.py  potencia.py  redes.py
