[metadata]
name = sistemasDePotencia
version = 0.1
description = Herramientas de Wolfang para calculos rapidos en sistemas de potencia

[options]
zip_safe = False
include_package_data = True
packages = sistemasDePotencia
install_requires =
    numpy
    texttable


[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501, W605
